# entropy-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entropy.toml.example  nginx.conf  pyproject.toml
dashboard/: index.html  package.json
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: Heatmap.jsx  Landing.jsx  ModuleDetail.jsx  TrendChart.jsx
entropy/: __init__.py  cli.py  config.py
entropy/analyzers/: __init__.py  ast_analyzer.py  dep_analyzer.py  git_analyzer.py
entropy/api/: __init__.py  main.py
entropy/api/routers/: __init__.py  alerts.py  modules.py  repos.py
entropy/scoring/: __init__.py  alerts.py  forecaster.py  scorer.py
entropy/storage/: __init__.py  db.py  models.py
entropy/tasks/: __init__.py  celery_app.py  scheduler.py
